# ClipForVRChat

./: .gitignore  AGENTS.md  LICENSE  PRODUCT_ISSUE_REPORT.md  README.md  RELEASE_NOTES.md  SECURITY_REVIEW.md  SPEC.md  app.go  main.go  todo.md  version.go
docs/: v0.1.8-embedded-metadata-verification.md  v0.1.8-player-local-verification.md  v0.1.8-stream-spout-verification.md
frontend/: index.html
issues/: 001-icon-quality-and-sizes.md  002-release-zip-contents-and-versioned-name.md  003-main-window-ui-and-about.md  004-initial-config-flow.md  005-window-drag-and-drop.md  006-clipboard-output-filename.md  007-clipboard-screenshot-corruption.md  008-ui-specification.md  009-move-source-under-src.md  010-settings-results-about-ui-improvements.md  011-help-screen-and-webhook-guide.md  012-image-history-and-discord-delete-review.md  013-user-friendly-readme-and-settings-ui.md  014-vrchat-photo-auto-post.md  015-security-review-report.md  016-validate-webhook-and-history-urls.md  017-harden-local-secret-storage-and-history-locking.md  018-limit-image-input-resource-usage.md  019-limit-auto-photo-scanning.md  020-add-security-checks-to-ci-release.md  021-address-gosec-tooling-findings.md  022-prevent-multiple-app-instances.md  023-expand-go-test-coverage.md  024-improve-discord-webhook-error-message.md  025-confirm-unsaved-settings-navigation.md  026-fix-v0.1.1-regressions.md  027-history-drag-selection.md  028-replace-history-long-press-with-button.md  029-history-select-all-and-pin.md  030-fix-discord-help-link.md  031-purge-discord-deleted-history.md  032-detect-qr-url-and-post.md  033-wsl-windows-build-script.md  034-release-version-includes-commit.md  035-add-processing-diagnostic-log.md  (+139 more)
reports/: README.md  (+12 more)
tools/spout-capture/: CMakeLists.txt  main.cpp
(+87 files in other folders)
